5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1575_1334.log
== TEST (2019-03-12 21:25:44) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 8 &)

print("Potenciacao: ", 2***3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 8 &)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:25:45) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 8 &)

print("Potenciacao: ", 2***3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 8 &)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:25:46) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 8 &)

print("Potenciacao: ", 2***3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 8 &)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:25:49) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 8 &)

print("Potenciacao: ", 2***3)
-- EXECUTION TIME:
0.176695
-- ERROR:
  File "/home/codebench/codes/1575/1334/main.py", line 9
    print("Resto: ", 8 &)
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:26:04) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ",  & 8)

print("Potenciacao: ", 2***3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ",  & 8)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:26:30) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 16 & 8)

print("Potenciacao: ", 2***3)
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2***3)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:26:34) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 16 & 8)

print("Potenciacao: ", 2***3)
-- EXECUTION TIME:
0.209268
-- ERROR:
  File "/home/codebench/codes/1575/1334/main.py", line 11
    print("Potenciacao: ", 2***3)
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:26:59) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 16 & 8)

print("Potenciacao: ", 2****3)
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 2****3)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:27:15) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 16 & 8)

print("Potenciacao: ", 2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:27:23) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 16 & 8)

print("Potenciacao: ", 2*4)
-- EXECUTION TIME:
0.158087
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:27:35) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 16 & 8)

print("Potenciacao: ", 2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:30:08) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 32 & 4)

print("Potenciacao: ", 2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:31:16) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 32 & 12)

print("Potenciacao: ", 2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:31:18) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 32 & 12)

print("Potenciacao: ", 2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:31:21) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 32 & 12)

print("Potenciacao: ", 2*4)
-- EXECUTION TIME:
0.169852
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  0
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:32:19) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", & 8)

print("Potenciacao: ", 2*4)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", & 8)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:32:22) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", & 8)

print("Potenciacao: ", 2*4)
-- EXECUTION TIME:
0.140803
-- ERROR:
  File "/home/codebench/codes/1575/1334/main.py", line 9
    print("Resto: ", & 8)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:35:02) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", % 8)

print("Potenciacao: ", 2*4)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", % 8)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:35:04) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", % 8)

print("Potenciacao: ", 2*4)
-- EXECUTION TIME:
0.169123
-- ERROR:
  File "/home/codebench/codes/1575/1334/main.py", line 9
    print("Resto: ", % 8)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:35:15) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 32 % 12)

print("Potenciacao: ", 2*4)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 21:35:18) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2)

print("Divisao: ", 16 / 2)

print("Resto: ", 32 % 12)

print("Potenciacao: ", 2*4)
-- EXECUTION TIME:
0.199759
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
